合并社交接口
